[package]
name = "anchor_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
syn = { version = "1", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
lazy_static = "1"
