[package]
name = "esp32c3_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor = { path = "../anchor" }
critical-section = "1.1.1"
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp32c3-hal = "0.5.0"
nb = "1.0.0"
riscv = "0.10.1"
riscv-rt = "0.11.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[build-dependencies]
anchor_codegen = { path = "../anchor_codegen" }
